Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13449

recovery-small test_140b: FAIL: recovery took too long 4362 20

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • Lustre 2.14.0, Lustre 2.12.6
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for jianyu <yujian@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/f1c30a21-d730-4d65-a379-d78f2e5fa72a

      test_140b failed with the following error:

      recovery took too long 4362 20
      

      <<Please provide additional information about the failure here>>

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      recovery-small test_140b - recovery took too long 4362 20

            adilger Andreas Dilger
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: